<resources>
    <string name="app_name">Smart Schools</string>
    <string name="submit">Submit</string>
    <string name="save_new_password">Save Password</string>
    <string name="action_settings">Settings</string>
    <string name="network_error">Network Error</string>
    <string name="time">Time :</string>
    <string name="date">Date</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="technical_suppor">technical suppor</string>
    <string name="ok">OK</string>
    <string name="next">Next</string>
    <string name="change_password">Change Password</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Admin</string>
    <string name="slide_1_desc">Effective communication between administrator,teachers, students and parents. with a complete automation of all operations .</string>
    <string name="slide_2_title">Parents</string>
    <string name="slide_2_desc">The parent can communicate directly with the school coordinator and follow up on the behavioral violations of others to build their occurrence and registration, as well as follow the children\'s grades and their achievement files and follow the teachers ’evaluation of the children and he can participate in the school survey.</string>
    <string name="slide_3_title">Students </string>
    <string name="slide_3_desc">SmartSchools facilitate communication between the Students and school\'s stakeholders and applying the best methods of distance learning .</string>
    <string name="slide_4_title">Teacher </string>
    <string name="slide_4_desc">SmartSchools facilitate communication and collaboration between Teachers and Students or administrators and employees, with a permanently open channel of communication. They facilitate the overall management of communication: global or individual emails, messages, Social Learning and agenda. An environment where the user can find all the important or vital information in just one screen.</string>
    <string name="bus_tracking">Bus Tracking</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="search">Search</string>
    <string name="details">Details</string>
    <string name="image">your picture</string>
    <string name="wifi_off">Unable to connect to the Internet Please make sure to connect to the network and try again</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="summary_language">Specify your preferred language</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="key_language">key_language</string>
    <string name="notifications_new_message">notifications</string>
    <string name="correct_errors">please correct the errors</string>
    <string name="language">Language</string>
    <string name="settings">Settings</string>
    <string name="status">Status  : </string>
    <string name="are_you_sure">Voulez-vous démarrer un appel téléphonique avec ce pilote ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="attention">Attention</string>
    <string name="person_name">Kate Jennifer</string>
    <string-array name="lang_entries">
        <item>العربية</item>
        <item>English</item>
        <item>French</item>
    </string-array>
    <string-array name="pref_lang">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="no_internet_connection">No internet connection .</string>
    <string name="terms_condition">Terms Condition</string>
    <string name="new_pass">New password</string>
    <string name="confirm_password">Confirm new password</string>
    <string name="terms_conditions">Terms and Conditions</string>
    <string name="send"> Send </string>
    <string name="navigation_drawer_open"> Open navigation drawer</string>
    <string name="navigation_drawer_close"> Close navigation drawer</string>
    <string name="name"> Fullname</string>
    <string name="email"> Email</string>
    <string name="login">Login</string>
    <string name="invalid_name"> Please enter your name</string>
    <string name="invalid_email">Please enter your valid email</string>
    <string name="invalid_email_phone">Please enter your email or phone</string>
    <string name="invalid_description">Please enter description</string>
    <string name="invalid_phone"> Please enter your phone number</string>
    <string name="invalid_login">Username or password incorrect</string>
    <string name="invalid_password">Please enter a valid password</string>
    <string name="invalid_password_confirm">Please confirm your password</string>
    <string name="compaines"> Compaines </string>
    <string name="permission_needed">Permission to use GPS</string>
    <string name="permission_message">This permission is required even to connect to the images so that you can upload your personal photo.</string>
    <string name="must_permission">This permission is required even to connect to the images so that you can upload your personal photo.</string>
    <string name="message_title">Message Title</string>
    <string name="message_body">Message Body</string>
    <string name="invalid_section">Please select the ad section</string>
    <string name="invalid_type">Please select the ad type</string>
    <string name="error_530">Sorry there was a problem with our server, please continue with admin</string>
    <string name="error_404">The data on this page is currently unavailable, try again later</string>
    <string name="error_500">Sorry there was a problem with our server, please continue with admin</string>
    <string name="error_400">An unknown error occurred please continue with admin"</string>
    <string name="unknown_error">An unknown error occurred please continue with admin"</string>
    <string name="illega_state_exception">An error occurred while trying to view the data. Please contact the administration</string>
    <string name="mycard">My Card</string>
    <string name="username">Username</string>
    <string name="enter_your_e_mail_below_to_rest_your_password">Enter your e-mail below to rest your password.</string>
    <string name="help">Help</string>
    <string name="mobile">Mobile</string>
    <string name="old_password">Old Password</string>
    <string name="old_password_title">Enter your Old-Password below to rest your password.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_messages">My Message</string>
    <string name="membership_card">MemberShip Card</string>
    <string name="attendance">Attendance</string>
    <string name="weekly_plan">Weekly Plan</string>
    <string name="quiz">Quiz</string>
    <string name="assignment">Assignments daily</string>
    <string name="grading">Grading</string>
    <string name="my_children">My Children</string>
    <string name="bus">Bus</string>
    <string name="notification_text">Tracking, tap to cancel</string>
    <string name="transport_id" translatable="false">7891</string>
    <string name="firebase_path" translatable="false">map/markers</string>
    <string name="firebase_email" translatable="false">mahmoud.elhofy92@gmail.com</string>
    <string name="firebase_password" translatable="false">Pa$$w0rd</string>
    <string name="inbox">In-Coming message</string>
    <string name="sent">Sent</string>
    <string name="schoolcourses">School Courses</string>
    <string name="studentsevaluations">Students Evaluations</string>
    <string name="create_assigment">Create Assigment</string>
    <string name="absence_report">Absence Report</string>
    <string name="archive">Archive</string>
    <string name="first">first</string>
    <string name="second">second</string>
    <string name="thried">thried</string>
    <string name="fourth">fourth</string>
    <string name="weeklyplan">Weekly Plan</string>
    <string name="save">Save</string>
    <string name="select_classes">Select Classes</string>
    <string name="smartschoolsnetwork">Smart Schools Network</string>
    <string name="namecard">Mahmoud ibrahim mohamed</string>
    <string name="_30_08_2019">End : 30 –08 – 2019</string>
    <string name="stuednt">Student</string>
    <string name="dashboard">Dashboard</string>
    <string name="attendance_student">Attendance Student</string>
    <string name="teachers">Teachers</string>
    <string name="student">Student</string>
    <string name="employees">Employees</string>
    <string name="supervisors">Supervisors</string>
    <string name="buss">Buss</string>
    <string name="classes">Classes</string>
    <string name="grade">Grade *</string>
    <string name="attachments">Attachments</string>
    <string name="attachment">Attachment : </string>
    <string name="assignment_details">Assignment Details</string>
    <string name="select_subject">Select Subject</string>
    <string name="done_successfully">Done Successfully</string>
    <string name="select_picture">Select Picture</string>
    <string name="invalid_class">invalid Class</string>
    <string name="select_section">Select Section</string>
    <string name="income">InCome</string>
    <string name="outcome">OutCome</string>
    <string name="testname">Name test :</string>
    <string name="testmetterm">test term</string>
    <string name="gradetest">Grade :</string>
    <string name="closed">closed</string>
    <string name="type">Type </string>
    <string name="timetext">Time :</string>
    <string name="review">Review :    </string>
    <string name="students">Students :</string>
    <string name="comment_supervisor">Comment Supervisor</string>
    <string name="message_details">Message Details</string>
    <string name="student_answer">Student Answer</string>
    <string name="write_the_answer_here">write the answer here …</string>
    <string name="choose_file">Choose File</string>
    <string name="school_courses">School Courses</string>
    <string name="quizzes">Quizzes</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="done">done!</string>
    <string name="min_sec">%d min, %d sec</string>
    <string name="answer_has_been_sent">Your answer has been successfully sent</string>
    <string name="week">Week:</string>
    <string name="term">Term :</string>
    <string name="newmessage">New Message</string>
    <string name="send_to">Send to</string>
    <string name="message">Message</string>
    <string name="write_the_assignment_here">Assignment details … *</string>
    <string name="from_date_17_12_2018">From Date 17–12–2018 *</string>
    <string name="to_date_17_12_2018">To Date 17–12–2018 *</string>
    <string name="giza_haram_6_october">Giza - Haram - 6 October</string>
    <string name="bus_number_5_at_sd">Bus Number: </string>
    <string name="driver_logy_mohamed_ahmed">Driver : </string>
    <string name="start_the_travel">Start the travel</string>
    <string name="address">address</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="select_lesson">Select Lesson</string>
    <string name="title">Title *</string>
    <string name="title_version">Version 1.42</string>
    <string name="url_verison">https://play.google.com/store/apps/details?id=smartschool.networl.com</string>
    <string name="my_app_store">Application on the App Store</string>
    <string name="record_voice_note">Press the mic button \n to record voice note</string>
</resources>