<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorOfGray"
    android:orientation="vertical">

    <!--android:visibility="gone"-->
    <!--android:id="@+id/teacher_add_assignment"-->


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"

                android:background="@drawable/shape_background_dashboard"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="16dp">




                <Spinner
                    android:id="@+id/spStages"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:visibility="gone"
                    android:spinnerMode="dropdown" />

                <TextView
                    android:id="@+id/tvStageCode"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="@dimen/_32sdp"
                    android:layout_marginRight="@dimen/_32sdp"
                    android:background="@color/colorWhite"
                    android:gravity="center"
                    android:padding="5dp"
                   android:visibility="gone"

                    />

                <Spinner
                    android:id="@+id/spSubject"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:visibility="gone"
                    android:spinnerMode="dropdown" />

                <TextView
                    android:id="@+id/tvSubject"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="@dimen/_32sdp"
                    android:layout_marginRight="@dimen/_32sdp"
                    android:background="@color/colorWhite"
                    android:gravity="center"
                    android:padding="5dp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tvClasses"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"

                    android:drawableEnd="@drawable/ic_select"
                    android:gravity="center"
                    android:text="@string/select_classes"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spUnit"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="@dimen/_22sdp"
                    android:layout_marginRight="@dimen/_22sdp"
                    android:gravity="center"
                    android:spinnerMode="dropdown"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:id="@+id/linearLesson"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/spLesson"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_marginStart="@dimen/_22sdp"
                        android:spinnerMode="dropdown"
                        />

                    <ImageView
                        android:id="@+id/ivAddLesson"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_weight="0"
                        android:src="@drawable/ic_add" />

                </LinearLayout>


                <Spinner
                    android:id="@+id/spTerm"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="@dimen/_22sdp"
                    android:layout_marginRight="@dimen/_22sdp"

                    android:gravity="center"
                    android:spinnerMode="dropdown" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:background="@drawable/shape_background_dashboard"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="16dp">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_Header"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/title"
                    app:boxStrokeColor="@color/colorPrimaryDark"
                    app:hintTextColor="@color/colorPrimary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etHeader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:inputType="text"
                        android:textAlignment="viewStart"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_body"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"

                    android:hint="@string/write_the_assignment_here"
                    app:boxStrokeColor="@color/colorPrimaryDark"
                    app:hintTextColor="@color/colorPrimary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etBody"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:gravity="start"
                        android:inputType="textMultiLine"
                        android:maxLines="100"
                        android:scrollbars="vertical"
                        android:textAlignment="viewStart"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_Grade"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"

                    android:hint="@string/grade"
                    app:boxStrokeColor="@color/colorPrimaryDark"
                    app:hintTextColor="@color/colorPrimary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etGrade"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:inputType="number"
                        android:textAlignment="viewStart"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_dateFrom"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"

                    android:hint="@string/from_date_17_12_2018"
                    app:boxStrokeColor="@color/colorPrimaryDark"
                    app:hintTextColor="@color/colorPrimary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etDateFrom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:editable="false"
                        android:focusable="false"
                        android:gravity="start"
                        android:inputType="date"
                        android:textAlignment="viewStart"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_dateTo"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"

                    android:hint="@string/to_date_17_12_2018"
                    app:boxStrokeColor="@color/colorPrimaryDark"
                    app:hintTextColor="@color/colorPrimary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etDateTo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:editable="false"
                        android:focusable="false"
                        android:gravity="start"
                        android:inputType="date"
                        android:textAlignment="viewStart"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:id="@+id/tvAttachFile"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/colorWhite"
                    android:drawableEnd="@drawable/ic_clip_attach"
                    android:drawablePadding="5dp"
                    android:gravity="center_vertical"
                    android:hint="@string/choose_file"
                    android:padding="5dp"
                    android:textSize="12sp" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvAttach"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_background_dashboard" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/record_btn"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@android:color/white"
                        android:src="@drawable/ic_rec" />

                    <Chronometer
                        android:id="@+id/record_timer"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp" />


                </LinearLayout>


                <TextView
                    android:id="@+id/record_filename"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:lineHeight="32dp"
                    android:text="@string/record_voice_note"
                    android:textColor="@color/primaryDark"
                    android:textSize="18sp" />

            </LinearLayout>


            <!--Details-->


            <TextView
                android:id="@+id/buSubmit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:background="@drawable/rounded_button_primary"
                android:gravity="center"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>